@@ -128,6 +128,8 @@ QString CompilerDriver_procurve_acl::run(const std::string &cluster_id,
 
     try
     {
+        clearReadOnly(fw);
+
         // Copy rules from the cluster object
         populateClusterElements(cluster, fw);
 
