@@ -106,6 +106,8 @@ QString CompilerDriver_ipt::run(const std::string &cluster_id,
 
     try
     {
+        clearReadOnly(fw);
+
         // Copy rules from the cluster object
         populateClusterElements(cluster, fw);
 
