@@ -177,6 +177,8 @@ QString CompilerDriver_ipf::run(const std::string &cluster_id,
 
     try
     {
+        clearReadOnly(fw);
+
         // Copy rules from the cluster object
         populateClusterElements(cluster, fw);
 
