@@ -121,6 +121,8 @@ QString CompilerDriver_ipfw::run(const std::string &cluster_id,
 
     try
     {
+        clearReadOnly(fw);
+
         // Copy rules from the cluster object
         populateClusterElements(cluster, fw);
 
