@@ -205,6 +205,8 @@ QString CompilerDriver_pf::run(const std::string &cluster_id,
 
     try
     {
+        clearReadOnly(fw);
+
         // Copy rules from the cluster object
         populateClusterElements(cluster, fw);
 
